# Django-Template

./: README.md
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .flake8  Dockerfile  docker-compose.yml  docker-dev.yml  example.env  pyproject.toml
{{cookiecutter.project_name}}/.hooks/: pre-merge-commit  pre-push
{{cookiecutter.project_name}}/config/: settings.py  urls.py
{{cookiecutter.project_name}}/users/admin/: __init__.py
{{cookiecutter.project_name}}/users/models/: user.py
