[tool.poetry]
name = "techgenius"
version = "0.1.0"
description = ""
authors = ["Shairbekov Bakyt <shairbekovbakyt312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
flake8 = "^7.0.0"
drf-yasg = "^1.21.7"
djangorestframework = "^3.15.1"
setuptools = "^69.5.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
